# dezyne

./: .dir-locals.el  .gitignore  .init.el  .mailmap  AUTHORS  FAILING  HACKING  MAINTAINERS  Makefile.am  NEWS  README  ROADMAP  RUN  VERSION  autogen.sh  blueprint.scm  collect.scm  configure  configure.ac  database.sql  det.dzn  dezyne.scm  doit  e.makreel  external.dzn  f.makreel  fork_required_out.makreel  guix.scm  hello.makreel  hello_block.makreel  hello_blocked_external.makreel  hello_bool.makreel  hello_enum.makreel  hello_external_queuefull.makreel  hello_function.makreel  hello_function_local.makreel  hello_function_local_nest.makreel  hello_function_local_recurse.makreel  hello_global_enum.makreel  hello_global_int.makreel  (+22 more)
.reuse/: dep5
.texinfo/: htmlxref.cnf
blueprint/: install.scm  sources.scm  tests.scm
build-aux/: compile-all.scm  config.make.in  config.mk.in  config.rpath  convert-meta.scm  copyright-header.scm  dezyne-org.sh  erpprocess.scm  indent.scm  migrate-baseline.sh  pre-inst-env.in  run-system-tests.scm  update-semantics.sh
debian/: README  changelog  control  copyright  dzn.lintian-overrides  rules  watch
doc/: dezyne-tutorial.texi  dezyne.texi
doc/announce/: ANNOUNCE-2.10.0  ANNOUNCE-2.11.0  ANNOUNCE-2.12.0  ANNOUNCE-2.13.0  ANNOUNCE-2.14.0  ANNOUNCE-2.15.0  ANNOUNCE-2.16.0  ANNOUNCE-2.17.0  ANNOUNCE-2.18.0  ANNOUNCE-2.19.0  ANNOUNCE-2.20.0  README
doc/examples/: ArmourIBVIRR.dzn  ArmourIBVIRRError.dzn  ArmourIIPRB.dzn  ArmourIIPRBError.dzn  ArmourIIPRE.dzn  ArmourIIPREError.dzn  ArmourIIPRV.dzn  ArmourIIPRVError.dzn  ArmourISOE.dzn  ArmourISOEError.dzn  ArmourMAOE.dzn  ArmourMAOEError.dzn  ArmourMSOE.dzn  ArmourMSOEError.dzn  ArmourOENABP.dzn  ArmourOENABPError.dzn  ArmourREIR.dzn  ArmourREIRError.dzn  Logger.dzn  README  armor.dzn  bottom_armor.dzn  ca.dzn  compliance-multiple-provides-fork.dzn  component-if-illegal.dzn  cruise-control-interfaces.dzn  cruise-control.dzn  decompose2-proxy.dzn  decompose2.dzn  defer-cancel.dzn  defer-selection.dzn  defer.dzn  dzn.async.dzn  foreign.cc  foreign.hh  function-call-status.dzn  hello-world.dzn  hello_foreign.dzn  icode.dzn  iconsole.dzn  (+39 more)
doc/images/: README  local.mk
doc/parse/: README  action-discard-value.dzn  action-discard-value.texi  action-in-complex-expression.dzn  action-in-complex-expression.texi  action-in-member-definition.dzn  action-in-member-definition.texi  action-outside-on.dzn  action-outside-on.texi  assign-outside-on.dzn  assign-outside-on.texi  binding-cycle-elaborate.dzn  binding-cycle-elaborate.texi  binding-cycle.dzn  binding-cycle.texi  binding-mismatch-direction.dzn  binding-mismatch-direction.texi  binding-mismatch-external.dzn  binding-mismatch-external.texi  binding-two-wildcards.dzn  binding-two-wildcards.texi  binding-wildcard-requires.dzn  binding-wildcard-requires.texi  blocking-in-interface.dzn  blocking-in-interface.texi  blocking-multiple-provides.dzn  blocking-multiple-provides.texi  call-discard-value.dzn  call-discard-value.texi  call-in-complex-expression.dzn  call-in-complex-expression.texi  call-in-member-definition.dzn  call-in-member-definition.texi  component-action-used-as-trigger.dzn  component-action-used-as-trigger.texi  component-provides-without-trigger.dzn  component-provides-without-trigger.texi  component-requires-without-trigger.dzn  component-requires-without-trigger.texi  component-trigger-used-as-action.dzn  (+70 more)
doc/semantics/: README  async_multiple_provides.dzn  block.dzn  blocking.dzn  blocking_multiple_provides.dzn  blocking_requires.dzn  bye.dzn  cancel.dzn  collateral.dzn  collateral_multiple_provides.dzn  direct_in.dzn  direct_multiple_out.dzn  direct_multiple_out1.dzn  direct_multiple_out2.dzn  direct_out.dzn  embrace.dzn  embrace2.dzn  external_multiple_out.dzn  external_multiple_out1.dzn  external_multiple_out2.dzn  external_multiple_out3.dzn  iblock.dzn  ibye.dzn  ihello.dzn  ihelloworld.dzn  indirect_blocking_multiple_external_out.dzn  indirect_blocking_multiple_out.dzn  indirect_blocking_out.dzn  indirect_in.dzn  indirect_multiple_out.dzn  indirect_multiple_out1.dzn  indirect_multiple_out2.dzn  indirect_multiple_out3.dzn  indirect_out.dzn  iworld.dzn  local.mk  multiple_provides.dzn  mux.dzn  proxy.dzn
dzn/: ast.scm  c++.scm  c++03.scm  c.scm  code-util.scm  code.scm  command-line.scm  completion.scm  config.scm.in  cs.scm  display.scm  dzn.scm  explore.scm  fifo.scm  find.scm  gdzn.scm  glue.scm  goops.scm  hash.scm  indent.scm  javascript.scm  json.scm  json2scm.scm  local.mk  lts.scm  lts2traces.scm  makreel.scm  misc.scm  normalize.scm  parse.scm  peg.scm  pipe.scm  scheme.scm  scm2json.scm  script.scm  serialize.scm  shell-util.scm  simulate.scm  stitch.scm  templates.scm  (+5 more)
dzn/ast/: accessor.scm  ast.scm  context.scm  equal.scm  (+11 more)
emacs/: dzn-mode.el  local.mk  pre-inst-env.el
gaiag/: #x#  .#x  .gitignore  GNUmakefile  II.csp  README  RUN  ast.scm  c++-choice.trace  c++.scm  c++03.scm  c++ew.scm  c.scm  check.sh  code-util.scm  code.scm  command-line.scm  completion.scm  config.scm.in  coverage  cs.scm  display.scm  dzn.scm  explore.scm  fifo.scm  g  gaiag  gdzn.scm  glue.scm  goops.scm  gr  indent.scm  interface-Console-c3.hh  javascript.scm  json.scm  json2scm  json2scm.scm  local.mk  lts.scm  lts2traces.scm  (+20 more)
gash/: io.scm  job.scm  local.mk  pipe.scm  util.scm
guix/: guile-json-cross.patch  guile-mingw-fcntl.patch  guile-mingw-piped-process.patch  guile-mingw-sigaction.patch  guile-mingw-start-child.patch  guile-mingw-suspendable.patch  guile-mingw.patch  guile-piped-process.patch  makefile.mk  mcrl2-Remove-git-magic-from-MCRL2Version.cmake.patch  mcrl2-lps2lts-stdout.patch  mcrl2-ltscompare-multiple-lts.patch  mcrl2-ltscompare-structured-output.patch  mcrl2-ltsgraph-override-lts-type.patch  mcrl2-ltsparallel.patch  mcrl2-pipeline-support.patch  mcrl2.patch
language/: Makefile
runtime/: local.mk
scmcrl2/: local.mk  traces.scm  verification.scm
test/: .gitignore  0001-bin-code2fdr-sut-systems-update.patch  GNUmakefile  README  SEQ-TESTS  TODO  makefile  makefile.mk  package.json  r.sh  run.sh  sim.sh  test
(+15794 files in other folders)
